--- a/whisper/messages/style.css
+++ b/whisper/messages/style.css
@@ -29,6 +29,14 @@
     border-bottom-left-radius: 12px;
 }
 
+#messageFeedContainer div.system {
+    background-color: #f2f2f2;
+    color: #666;
+    align-self: center;
+    width: 100%;
+    text-align: center;
+}
+
 #messageInputContainer {
     position: sticky;
     bottom: 0px;
@@ -40,6 +48,10 @@
     border-top: 1px solid var(--whisper-border);
     background-color: rgba(255, 255, 255, 0.8);
     backdrop-filter: blur(10px);
+}
+
+#messageMediaUpload {
+    display: none;
 }
 
 #messageInputArea {
