--- a/whisper/create_post/style.css
+++ b/whisper/create_post/style.css
@@ -36,7 +36,8 @@
 }
 
 #createPostTextArea::selection {
-    background-color: #b3d4fc; /* Change caret color here */
+    background-color: #b3d4fc;
+    /* Change caret color here */
 }
 
 .createPostContainer input[type="file"] {
@@ -50,8 +51,8 @@
 #createPostButtons {
     display: flex;
     width: 100%;
-    /* justify-content: space-between; */
-    /* margin-top: 12px; */
+    justify-content: space-between;
+    padding-right: 12px;
 }
 
 #createPostButtonsStart {
@@ -77,4 +78,40 @@
 #createPostMediaPreview .video-preview {
     max-height: 500px;
     border-radius: 16px;
+}
+
+/* Style the dropdown container */
+.dropdown {
+    position: relative;
+    display: inline-block;
+}
+
+/* Style the dropdown content (hidden by default) */
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+    z-index: 1;
+    top: 100%;
+    top: 0;
+}
+
+/* Style the dropdown links */
+.dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+
+/* Change color of dropdown links on hover */
+.dropdown-content a:hover {
+    background-color: #ddd;
+}
+
+/* Show the dropdown when hovering over its container */
+.show {
+    display: block;
 }
