--- a/whisper/posts/style.css
+++ b/whisper/posts/style.css
@@ -18,7 +18,7 @@
     transition: background-color 200ms ease-in-out;
 }
 
-#displayPostContainerPart2 p {
+.displayPostContainerPart2 p {
     max-width: 500px;
     white-space: pre-line;
     word-wrap: break-word;
@@ -26,14 +26,15 @@
 }
 
 .displayPostContainer .voteCount {
-    width: 70px;
+    margin-left: 24px;
+    width: 150px;
 }
 
-#displayPostContainerPart1 {
+.displayPostContainerPart1 {
     margin-right: 12px;
 }
 
-#displayPostContainerPart2 {
+.displayPostContainerPart2 {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
@@ -45,7 +46,7 @@
     width: 100%;
 } */
 
-#displayPostTextArea {
+.displayPostTextArea {
     width: 100%;
     height: auto;
     font-size: 20px;
@@ -56,7 +57,7 @@
     resize: none;
 }
 
-#displayPostTextArea::selection {
+.displayPostTextArea::selection {
     background-color: #b3d4fc;
     /* Change caret color here */
 }
@@ -69,30 +70,65 @@
     display: block;
 } */
 
-#displayPostButtons {
+.displayPostButtons {
     display: flex;
-    width: 100%;
     align-items: center;
     margin-top: 12px;
 }
 
-#displayPostButtons .fa-image {
-    margin-right: 10px;
+.displayPostButtons0 {
+    display: flex;
+    align-items: center;
 }
 
-#displayPostButtons .btn {
+.displayPostButtons .btn {
     margin-left: 4px;
 }
 
-#displayPostMediaPreview {
+.displayPostButtons2 {
+    display: flex;
+    align-items: center;
+    margin-left: 4px;
+}
+
+.displayPostButtons3 {
+    display: flex;
+    align-items: center;
+}
+
+.displayPostButtons .fa-image {
+    margin-right: 10px;
+}
+
+.displayPostButtons3 .btn {
+    margin-left: 4px;
+    margin-bottom: 8px;
+}
+
+.displayPostMediaPreview {
     display: flex;
     flex-direction: column;
     max-width: 500px;
-}
-
-#displayPostMediaPreview .image-preview,
-#displayPostMediaPreview .video-preview {
-    max-height: 500px;
     border-radius: 16px;
     border: 1px solid rgb(207, 217, 222);
+    overflow: hidden;
+}
+
+.displayPostMediaPreview .image-preview,
+.displayPostMediaPreview .video-preview {
+    max-height: 500px;
+}
+
+#postsFeedContainer .errorMessage {
+    margin-top: 8px;
+}
+
+.displayPostButtons2 .btn2 {
+    width: 100px;
+}
+
+.approveCount {
+    align-self: flex-start;
+    margin-left: 24px;
+    margin-top: 10px;
 }
