--- a/whisper/topbar-middle/style.css
+++ b/whisper/topbar-middle/style.css
@@ -9,6 +9,7 @@
     border-bottom: 1px solid var(--whisper-border);
     background-color: rgba(255, 255, 255, 0.8);
     backdrop-filter: blur(8px);
+    z-index: 1;
 }
 
 .topbar-middle-text {
