--- a/whisper/posts/style.css
+++ b/whisper/posts/style.css
@@ -83,33 +83,8 @@
     margin-top: 12px;
 }
 
-.displayPostButtons0 {
-    display: flex;
-    align-items: center;
-}
-
 .displayPostButtons .btn {
     margin-left: 4px;
-}
-
-.displayPostButtons2 {
-    display: flex;
-    align-items: center;
-    margin-left: 4px;
-}
-
-.displayPostButtons3 {
-    display: flex;
-    align-items: center;
-}
-
-.displayPostButtons .fa-image {
-    margin-right: 10px;
-}
-
-.displayPostButtons3 .btn {
-    margin-left: 4px;
-    margin-bottom: 8px;
 }
 
 .displayPostMediaPreview {
@@ -127,15 +102,11 @@
 }
 
 #postsFeedContainer .errorMessage {
-    margin-top: 8px;
+    margin-top: 12px;
 }
 
-.displayPostButtons2 .btn2 {
-    width: 100px;
-}
-
-.approveCount {
+/* .approveCount {
     align-self: flex-start;
     margin-left: 24px;
     margin-top: 10px;
-}
+} */
