--- a/whisper/create_post/style.css
+++ b/whisper/create_post/style.css
@@ -72,12 +72,14 @@
     display: flex;
     flex-direction: column;
     max-width: 500px;
+    border-radius: 16px;
+    border: 1px solid rgb(207, 217, 222);
+    overflow: hidden;
 }
 
 #createPostMediaPreview .image-preview,
 #createPostMediaPreview .video-preview {
     max-height: 500px;
-    border-radius: 16px;
 }
 
 /* Style the dropdown container */
